Removed the s in the default data files in hopes of fixing issues with navigation. Fix drop down sizes

--- a/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/About.cshtml
@@ -16,35 +16,35 @@
         <div class="card-body">
             <h5 class="card-title">Abigail Thompson</h5>
             <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+                Software Developer. I've taken my passion of horror video games to use in developing a website that anyone can enjoy and learn more about haunted locations in Wisconsin. Highly suggest the Old Baraboo Inn tour!
             </p>
         </div>
         <div class="card-footer">
-            <small class="text-muted">Favorite Site:</small>
+            <small class="text-muted">Favorite Site: Old Baraboo Inn</small>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <img class="card-img-top" src="~/images/cadinhead.png" alt="Photo of Cadin Marohl">
         <div class="card-body">
             <h5 class="card-title">Cadin Marohl</h5>
             <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+             Web Developer and Designer. I love working for Spooky Wisconsin and being able to share experiences about paranormal places in Wisconsin with locals and other enthusiasts.    
             </p>
         </div>
         <div class="card-footer">
-            <small class="text-muted">Favorite Site:</small>
+            <small class="text-muted">Favorite Site: Al Ringling Mansion</small>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="~/images/colbyhead.png" alt="placeholder image">
+        <img class="card-img-top" src="~/images/colbyhead.png" alt="Photo of Colby Witthuhn">
         <div class="card-body">
             <h5 class="card-title">Colby Witthuhn</h5>
             <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+                Software Developer by day, Ghost Haunting Investigator by night. I love to do research about new areas in Wisconsin for the paranormal with hopes of exploring them to experience it myself.
             </p>
         </div>
         <div class="card-footer">
-            <small class="text-muted">Favorite Site:</small>
+            <small class="text-muted">Favorite Site: Dartford Cemetery</small>
         </div>
     </div>
 </div>
@@ -70,19 +70,19 @@
             </p>
         </div>
         <div class="card-footer">
-            <small class="text-muted">Favorite Site: </small>
+            <small class="text-muted">Favorite Site: Riverside Theater</small>
         </div>
     </div>
     <div class="card">
-        <img class="card-img-top" src="~/images/logosm.jpeg" alt="placeholder image">
+        <img class="card-img-top" src="~/images/thayhead.png" alt="Photo of Thay Lee">
         <div class="card-body">
             <h5 class="card-title">Thay Lee</h5>
             <p class="card-text">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut condimentum ultricies pharetra. In non orci ut sapien tristique sodales. Suspendisse ac diam in ex auctor luctus nec vitae nibh.
+                Enjoyed watching Ghostbusters and Scooby Doo as a kid. Being a Software Developer for Spooky Wisconsin has allowed me to show my love of those characters and let everyone being ghostbuster themselves.
             </p>
         </div>
         <div class="card-footer">
-            <small class="text-muted">Favorite Site:</small>
+            <small class="text-muted">Favorite Site: Grand Opera</small>
         </div>
     </div>
 </div>
