--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -26,7 +26,7 @@
                         </li>
                         <li class="dropdown nav-item">
                                 <a class="nav-link text-light">Locations</a>
-                                <div class="dropdown-options overflow-scroll bg-black">
+                                <div class="dropdown-options droplrg overflow-scroll bg-black">
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AlRinglingMuseum">Al Ringling Museum</a> <br />
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AmbassadorHotel">Ambassador Hotel</a> <br />
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="BloodyBrideBridge">Bloody Bride Bridge</a> <br />
@@ -55,7 +55,7 @@
                         </li>
                         <li class="dropdown nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Member" asp-action="Index">Membership</a>
-                            <div class="dropdown-options bg-black">
+                            <div class="dropdown-options dropsml bg-black">
                                 <a class="nav-link text-light" asp-area="" asp-controller="Tier" asp-action="Index">Tiers</a>
                             </div>
                         </li>
