Added to the index page and tried altering al ringling photos to better fit website

--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<div class="container-fluid">
 <div class="slideshow">
     <!-- Carousel -->
     <div id="demo" class="carousel slide" data-bs-ride="carousel">
@@ -38,9 +39,17 @@
 <br />
 <div class="container-sm">
     <h2>Welcome to Spooky Wisconsin</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer elementum eget ligula ut interdum. Mauris id dolor purus. Pellentesque augue arcu, tincidunt a lacus vel, porttitor porta libero. Maecenas neque dolor, cursus vel tristique sed, dapibus nec tortor. Quisque venenatis hendrerit risus, non lacinia ipsum facilisis et. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sit amet velit convallis, auctor ipsum nec, pellentesque turpis. Duis nec porta lectus, quis rutrum risus. Phasellus consequat augue sit amet velit efficitur molestie.</p>
+    <p>Ever wonder where all the haunted locations are in the state of Wisconsin? We got you covered. We have all the information you need to know about these spooky places. 
+        Many places offer tours and events that can help you experience the paranormal for yourself or just know more about the history of the location. We act as a third party for many of these destinations and have exclusive deals with them so you can get more out of the experience. 
+        You can also snag some custom swag to show everyone you know how big of a fanatic you are of everything spooky.
+    </p>
+        <br />
+    <p>
+        Make sure to take advantage of the Interactive Map to find where all of your destinations are and for directions as well as our News banner for any updates on our website. More information about destinations can be found out by signing up for our newsletter.
+    </p>
 </div>
 <!--Interactive Map-->
 <div class="container-md">
     <iframe frameborder=0 style='width:100%;height:500px;' src='//www.zeemaps.com/pub?group=4834618&list=1&x=-90.142917&y=44.646376&z=11'> </iframe>
+</div>
 </div>
