--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Contact.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Contact.cshtml
@@ -28,7 +28,7 @@
     <div class="form-group row">
         <label class="col-sm-2 col-form-label" for="message">Message:</label>
         <div class="col-sm-10">
-            <input type="text" id="message" name="message" size="75" placeholder="Please add your message here.">
+            <textarea id="message" name="message" rows="4" cols="50">Please add your message here.</textarea>
         </div>
     </div>
     <div class="form-group row">
