--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -154,5 +154,12 @@ a:hover {
     cursor: pointer;
 } /*This ID is for a window that will let users click on pictures to see them better*/
 
-
+.tierList{
+    padding-left: 105px;
+}
+.tiers{
+    width: 30%;
+    float:left;
+    margin:5px;
+} /*These are the classes that are used to add some design to the tiers page*/
 
