--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -77,6 +77,34 @@
                             <a class="nav-link text-light" asp-area="" asp-controller="Home" asp-action="Contact">Contact</a>
                         </li>
                     </ul>
+                   @*  @{
+                        SDG.SpookyWisconsin.BL.UserManager.Seed();
+                        var fullname = HttpContextAccessor.HttpContext?.Session.GetString("fullname");
+                    }
+                    <ul class="navbar-nav">
+                        @if (fullname == null)
+                        {
+                            <li class="nav-link text-light ms-2"><a asp-controller="User" asp-action="Login">Login</a></li>
+                        }
+                        else if (fullname.Contains("W"))
+                        {
+                            <li class="nav-link text-light ms-2"><a asp-controller="User" asp-action="Logout">Logout</a></li>
+                        }
+                        else
+                        {
+                            <li class="nav-link text-light ms-2"><a asp-controller="User" asp-action="Login">Login</a></li>
+                        }
+                    </ul>
+                    <ul class="navbar-nav">
+                        <li class="nav-item">
+                            @{
+                                //CCM.DVDCentral.BL.UserManager.Seed();
+                                //var fullname = HttpContextAccessor.HttpContext?.Session.GetString("fullname");
+                                if (fullname != null) fullname = fullname.Replace("\"", "");
+                            }
+                            <a class="nav-link text-light">@fullname</a>
+                        </li>
+                    </ul> *@
                 </div>
             </div>
         </nav>
