--- a/SDG.SpookyWisconsin.WebUI/Views/Tier/Edit.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tier/Edit.cshtml
@@ -5,19 +5,11 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Edit</h1>
-
-<h4>Tier</h4>
-<hr />
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <input hidden asp-for="Id" />
             <div class="form-group">
                 <label asp-for="TierName" class="control-label"></label>
                 <input asp-for="TierName" class="form-control" />
