--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Edit.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedEvent/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model SDG.SpookyWisconsin.BL.Models.HauntedEvent
+﻿@model SDG.SpookyWisconsin.WebUI.ViewModels.HauntedEventVM
 
 @{
     ViewData["Title"] = "Edit";
@@ -10,35 +10,35 @@
     <div class="col-md-4">
         <form asp-action="Edit">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <input hidden asp-for="Id" class="form-control" />
-            <input hidden asp-for="HauntedLocationId" class="form-control" />
-           @*  <div class="form-group">
-                <label asp-for="HauntedEvent.HauntedLocationName" class="control-label"></label>
+            <input hidden asp-for="HauntedEvent.Id" class="form-control" />
+            <input hidden asp-for="HauntedEvent.HauntedLocationId" class="form-control" />
+            <div class="form-group">
+                <label asp-for="HauntedEvent.LocationName" class="control-label"></label>
                 <select asp-for="HauntedEvent.HauntedLocationId" class="form-control"
-                        asp-items="@(new SelectList(Model.HauntedLocation, "Id", "Name"))"></select>
+                        asp-items="@(new SelectList(Model.HauntedLocations, "Id", "Name"))"></select>
                 <span asp-validation-for="HauntedEvent.HauntedLocationId" class="text-danger"></span>
-            </div> *@
-            <input hidden asp-for="ParticipantId" class="form-control" />
-            @*  <div class="form-group">
-            <label asp-for="HauntedEvent.ParticipantDescription" class="control-label"></label>
-            <select asp-for="Movie.FormatId" class="form-control"
-            asp-items="@(new SelectList(Model.Formats, "Id", "Description"))"></select>
+            </div>
+            <input hidden asp-for="HauntedEvent.ParticipantId" class="form-control" />
+             <div class="form-group">
+            <label asp-for="HauntedEvent.ParticipantName" class="control-label"></label>
+            <select asp-for="HauntedEvent.ParticipantId" class="form-control"
+            asp-items="@(new SelectList(Model.Participants, "Id", "Name"))"></select>
             <span asp-validation-for="HauntedEvent.ParticipantId" class="text-danger"></span>
-            </div> *@
-            <div class="form-group">
-                <label asp-for="Name" class="control-label"></label>
-                <input asp-for="Name" class="form-control" />
-                <span asp-validation-for="Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Date" class="control-label"></label>
-                <input asp-for="Date" class="form-control" />
-                <span asp-validation-for="Date" class="text-danger"></span>
+                <label asp-for="HauntedEvent.Name" class="control-label"></label>
+                <input asp-for="HauntedEvent.Name" class="form-control" />
+                <span asp-validation-for="HauntedEvent.Name" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Description" class="control-label"></label>
-                <input asp-for="Description" class="form-control" />
-                <span asp-validation-for="Description" class="text-danger"></span>
+                <label asp-for="HauntedEvent.Date" class="control-label"></label>
+                <input asp-for="HauntedEvent.Date" class="form-control" />
+                <span asp-validation-for="HauntedEvent.Date" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="HauntedEvent.Description" class="control-label"></label>
+                <input asp-for="HauntedEvent.Description" class="form-control" />
+                <span asp-validation-for="HauntedEvent.Description" class="text-danger"></span>
             </div>
             @* <div class="form-group">
                 <label asp-for="HauntedEvent.ImagePath" class="control-label"></label>
