--- a/SDG.SpookyWisconsin.WebUI/Views/Participant/Create.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Participant/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model SDG.SpookyWisconsin.BL.Models.Participant
+﻿@model SDG.SpookyWisconsin.WebUI.ViewModels.ParticipantVM
 
 @{
     ViewData["Title"] = "Create";
@@ -9,14 +9,20 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="HauntedEventId" class="control-label"></label>
-                <input asp-for="HauntedEventId" class="form-control" />
-                <span asp-validation-for="HauntedEventId" class="text-danger"></span>
+                <label asp-for="Participant.HauntedEventId" class="control-label"></label>
+                <input asp-for="Participant.HauntedEventId" class="form-control" />
+                <span asp-validation-for="Participant.HauntedEventId" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="CustomerId" class="control-label"></label>
-                <input asp-for="CustomerId" class="form-control" />
-                <span asp-validation-for="CustomerId" class="text-danger"></span>
+                <label asp-for="Participant.HauntedEventName" class="control-label"></label>
+                <select asp-for="Participant.HauntedEventId" class="form-control"
+                        asp-items="@(new SelectList(Model.HauntedEvents, "Id", "Name"))"></select>
+                <span asp-validation-for="Participant.HauntedEventId" class="text-danger"></span>
+            </div>
+            <div class="form-group">
+                <label asp-for="Participant.CustomerId" class="control-label"></label>
+                <input asp-for="Participant.CustomerId" class="form-control" />
+                <span asp-validation-for="Participant.CustomerId" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
