--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -98,7 +98,7 @@
                     <ul class="navbar-nav">
                         <li class="nav-item">
                             @{
-                                //CCM.DVDCentral.BL.UserManager.Seed();
+                                //SDG.SpookyWisconsin.BL.UserManager.Seed();
                                 //var fullname = HttpContextAccessor.HttpContext?.Session.GetString("fullname");
                                 if (fullname != null) fullname = fullname.Replace("\"", "");
                             }
