--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -55,6 +55,10 @@ li a:hover{
     background:red;
 }
 
+h2{
+    align-content:center;
+}
+
 /*Dropdown Menu*/
 .dropdown {
     position: relative;
