--- a/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
@@ -1,50 +1,37 @@
 ﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.Merch>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Merch";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<p>
-    <a asp-action="Create">Create New</a>
-</p>
-<table class="table">
-    <thead>
-        <tr>
-            <th>
-                @Html.DisplayNameFor(model => model.MerchName)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.InStkQty)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Description)
-            </th>
-            <th>
-                @Html.DisplayNameFor(model => model.Cost)
-            </th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-@foreach (var item in Model) {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.MerchName)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.InStkQty)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Description)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Cost)
-            </td>
-            <td>
-                @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-            </td>
-        </tr>
-}
-    </tbody>
-</table>
+
+<h1>Merch</h1>
+<h2>@ViewBag.MerchTypeDesc</h2>
+
+<div class="row">
+    @foreach (var item in Model)
+    {
+        <div class="col-sm-4">
+            <div class="card mb-2">
+                <div class="card-header header">
+                    <h3>@item.MerchName</h3>
+                </div>
+                <div class="card-img">
+                    <img src="~/images/@item.ImagePath"/>
+                </div>
+
+                <div class="card-body">
+                    <h5>@Html.DisplayFor(modelItem => item.Description)</h5>
+                    <h5>$@Html.DisplayFor(modelItem => item.Cost)</h5>
+                    <h5>@Html.DisplayFor(modelItem => item.InStkQty) in stock</h5>
+                </div>
+                <div class="card-footer">
+                    <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Edit">Edit</a>
+                    <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Details">Details</a>
+                    <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Delete">Delete</a>
+                    <input class="btn btn-primary btn-sm" type="button" onclick="AddToCart(@item.Id)" value="+" />
+                </div>
+            </div>
+        </div>
+    }
+</div>
