--- a/SDG.SpookyWisconsin.WebUI/Views/Order/Create.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Order/Create.cshtml
@@ -8,11 +8,7 @@
     <div class="col-md-4">
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="CartId" class="control-label"></label>
-                <input asp-for="CartId" class="form-control" />
-                <span asp-validation-for="CartId" class="text-danger"></span>
-            </div>
+            
             <div class="form-group">
                 <label asp-for="CustomerId" class="control-label"></label>
                 <input asp-for="CustomerId" class="form-control" />
@@ -24,9 +20,9 @@
                 <span asp-validation-for="OrderDate" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="DeliverDate" class="control-label"></label>
-                <input asp-for="DeliverDate" class="form-control" />
-                <span asp-validation-for="DeliverDate" class="text-danger"></span>
+                <label asp-for="ShipDate" class="control-label"></label>
+                <input asp-for="ShipDate" class="form-control" />
+                <span asp-validation-for="ShipDate" class="text-danger"></span>
             </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
