--- a/SDG.SpookyWisconsin.WebUI/Views/Order/Details.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Order/Details.cshtml
@@ -7,12 +7,6 @@
 <div>
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.CartId)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.CartId)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.CustomerId)
         </dt>
         <dd class = "col-sm-10">
@@ -25,10 +19,10 @@
             @Html.DisplayFor(model => model.OrderDate)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.DeliverDate)
+            @Html.DisplayNameFor(model => model.ShipDate)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.DeliverDate)
+            @Html.DisplayFor(model => model.ShipDate)
         </dd>
     </dl>
 </div>
