--- a/SDG.SpookyWisconsin.WebUI/Views/Order/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Order/Index.cshtml
@@ -11,16 +11,13 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.CartId)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.CustomerId)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.OrderDate)
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.DeliverDate)
+                @Html.DisplayNameFor(model => model.ShipDate)
             </th>
             <th></th>
         </tr>
@@ -29,16 +26,13 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.CartId)
-            </td>
-            <td>
                 @Html.DisplayFor(modelItem => item.CustomerId)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.OrderDate)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.DeliverDate)
+                @Html.DisplayFor(modelItem => item.ShipDate)
             </td>
             <td>
                 @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
