find and replace UserName -> Username

--- a/SDG.SpookyWisconsin.WebUI/Views/User/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/User/Index.cshtml
@@ -11,7 +11,7 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.UserName)
+                @Html.DisplayNameFor(model => model.Username)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Password)
@@ -23,7 +23,7 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.UserName)
+                @Html.DisplayFor(modelItem => item.Username)
             </td>
             <td>
                 <p>secret</p>
