changed the tier list information displayed

--- a/SDG.SpookyWisconsin.WebUI/Views/Tier/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tier/Index.cshtml
@@ -16,12 +16,14 @@
             </div>
             <div class="card-body">
                 <h1 class="card-title pricing-card-title">
-                    $0.99
+                    $7.99/Monthly
                     <small class="text-muted">/ mo</small>
                 </h1>
             </div>
             <ul class="list-unstyled mt-3 mb-4">
                 <li>Monthly Newsletter</li>
+                <li>Tour Access</li>
+                <li>Exclusive Store Items</li>
                 <li><br /></li>
                 <li><br /></li>
             </ul>
@@ -33,13 +35,14 @@
             </div>
             <div class="card-body">
                 <h1 class="card-title pricing-card-title">
-                    $4.99
+                    $9.99/Monthly
                     <small class="text-muted">/ mo</small>
                 </h1>
             </div>
             <ul class="list-unstyled mt-3 mb-4">
                 <li>Monthly Newsletter</li>
-                <li>Spooky Website Themes</li>
+                <li>Tour Access</li>
+                <li>Exclusive Store Items + Colors</li>
                 <li><br /></li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up Now!</button>
@@ -50,14 +53,16 @@
             </div>
             <div class="card-body">
                 <h1 class="card-title pricing-card-title">
-                    $9.99
+                    $15.99
                     <small class="text-muted">/ mo</small>
                 </h1>
             </div>
             <ul class="list-unstyled mt-3 mb-4">
                 <li>Monthly Newsletter</li>
-                <li>Spooky Website Themes</li>
-                <li>Priority Tour Sign Up</li>
+                <li>Tour Access</li>
+                <li>Exclusive Store Items + more Colors</li>
+                <li>Special Events & Discounts</li>
+                <li>Monthly Shop Discounts</li>
             </ul>
             <button type="button" class="btn btn-lg btn-block btn-outline-primary">Sign up Now!</button>
         </div>
