Progress so far - cart shown but not working

--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/Components/Cart/Default.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/Components/Cart/Default.cshtml
@@ -1,8 +1,8 @@
 ﻿@model SDG.SpookyWisconsin.BL.Models.Cart
 
-<div>
+<div class="m-2">
     <d1 class="d1-horizontal">
-        <dt>Count</dt>
+        <dt></dt>
         <dd>
             @{
                 int count = Model.TotalCount;
