--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <script type="text/javascript" language="javascript" src="https://code.jquery.com/jquery-3.5.1.js"></script>
+    <script type="text/javascript" language="javascript" src="https://cdn.datatables.net/1.10.24/js/jquery.dataTables.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.10.24/css/jquery.dataTables.min.css" />
     <link rel="stylesheet" href="~/SDG.SpookyWisconsin.WebUI.styles.css" asp-append-version="true" />
 </head>
 <body>
@@ -118,6 +120,19 @@
         </main>
     </div>
 
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-2 sidebar rounded-top">
+                <div class="header rounded-top">
+                    <h4>Cart</h4>
+                </div>
+                <div>
+                    @await Component.InvokeAsync("Cart")
+                </div>
+            </div>
+        </div>
+    </div>
+
     <footer class="border-top footer text-muted bg-black">
         <div class="container text-light">
             &copy; 2023 - FVTC Scooby Doo Gang - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
@@ -129,3 +144,14 @@
     @await RenderSectionAsync("Scripts", required: false)
 </body>
 </html>
+
+<script type="text/javascript">
+    function AddToCart(id) {
+        $.get("/Cart/AddToCart/" + id, function (data) {
+            console.log("Starting adding " + id);
+            var cartcount = parseInt($("#cartcount").val()) + 1;
+            $("#cartcount").val(cartcount);
+            $("#cartcountdisp").text(cartcount + " Items");
+        });
+    }
+</script>
