--- a/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
@@ -29,7 +29,7 @@
                     <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Edit">Edit</a>
                     <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Details">Details</a>
                     <a class="btn btn-sm btn-primary" asp-route-id="@item.Id" asp-action="Delete">Delete</a>
-                    <input class="btn btn-primary btn-sm" type="button" onclick="AddToCart(@item.Id)" value="+" />
+                    <input class="btn btn-primary btn-sm" type="button" onclick="AddToCart('@item.Id')" value="+" />
                 </div>
             </div>
         </div>
