Improved merch store readability

--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -126,7 +126,7 @@
                 <div class="header rounded-top">
                     <h4>Cart</h4>
                 </div>
-                <div>
+                <div class="bg-dark">
                     @await Component.InvokeAsync("Cart")
                 </div>
             </div>
