--- a/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
@@ -32,3 +32,16 @@
         </div>
     }
 </div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-2 sidebar rounded-top">
+            <div class="header rounded-top">
+                <h4>Cart</h4>
+            </div>
+            <div class="bg-dark">
+                @await Component.InvokeAsync("Cart")
+            </div>
+        </div>
+    </div>
+</div>
