--- a/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Home/Index.cshtml
@@ -50,6 +50,6 @@
 </div>
 <!--Interactive Map-->
 <div class="container-md">
-    <iframe frameborder=0 style='width:100%;height:500px;' src='//www.zeemaps.com/pub?group=4834618&list=1&x=-90.142917&y=44.646376&z=11'> </iframe>
+    <iframe frameborder=0 style='width:100%;height:500px' src='//www.zeemaps.com/pub?group=4853858&legend=1&list=1&x=-89.426213&y=44.920849&z=11'> </iframe>
 </div>
 </div>
