--- a/SDG.SpookyWisconsin.WebUI/Views/Member/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Member/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.Member>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Membership";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
