--- a/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Merch/Index.cshtml
@@ -17,7 +17,7 @@
                     <h3>@item.MerchName</h3>
                 </div>
                 <div class="card-img">
-                    <img src="~/images/merch/@item.ImagePath"/>
+                    <img src="/images/merch/@item.ImagePath"/>
                 </div>
 
                 <div class="card-body">
