--- a/SDG.SpookyWisconsin.WebUI/Views/NewsLetter/Index.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/NewsLetter/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<SDG.SpookyWisconsin.BL.Models.NewsLetter>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "Newsletter";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
