Create account works

--- a/SDG.SpookyWisconsin.WebUI/Views/User/Login.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/User/Login.cshtml
@@ -28,7 +28,9 @@
 </div>
 
 <div class ="ms-2">
-    <a asp-action="Index">Back to List</a>
+    <p id="createText">
+        <a asp-action="Create">Create Account</a>
+    </p>
 </div>
 
 @section Scripts {
