--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -177,3 +177,8 @@ h2{
     margin:5px;
 } /*These are the classes that are used to add some design to the tiers page*/
 
+#createText{
+    color: black;
+    
+}
+
