--- a/SDG.SpookyWisconsin.WebUI/Views/User/Create.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/User/Create.cshtml
@@ -18,14 +18,10 @@
                 <input asp-for="Password" class="form-control" />
                 <span asp-validation-for="Password" class="text-danger"></span>
             </div>
-            <div class="form-group">
+            <div class="form-group mt-2">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
