--- a/SDG.SpookyWisconsin.WebUI/Views/Tier/Payment.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Tier/Payment.cshtml
@@ -142,7 +142,7 @@
               </div>
             </div>
             <hr class="mb-4">
-            <button class="btn btn-primary btn-lg btn-block" type="submit">Continue to checkout</button>
+            <button class="btn btn-primary btn-lg btn-block" onclick="location.href='@Url.Action("CheckOut","Tier")'" type="button">Check Out</button>
           </form>
         </div>
       </div>
