General css fixed for location pages.

--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/AlRinglingMuseum.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/AlRinglingMuseum.cshtml
@@ -10,6 +10,6 @@
     <h2>Al Ringling Mansion</h2>
     <h4>Baraboo - Sauk County</h4>
     <img class="locimageside" src="~/images/locations/alringling2.png" alt="Old photo of the Al Ringling Mansion.">
-    <p>The red stone mansion was built in 1905 and was home to Al. Ringling, a legendary circus showman at the time. After the passing of Al. Ringling, the mansion was abandoned for many years until being purchased and restored to its former glory. Visitors of the now restored mansion have reported seeing the ghosts of the past wandering the mansion. People have reported seeing ghosts wandering around in the mansion and sitting at the dinner tables. </p>
+    <p class="blockinfo">The red stone mansion was built in 1905 and was home to Al. Ringling, a legendary circus showman at the time. After the passing of Al. Ringling, the mansion was abandoned for many years until being purchased and restored to its former glory. Visitors of the now restored mansion have reported seeing the ghosts of the past wandering the mansion. People have reported seeing ghosts wandering around in the mansion and sitting at the dinner tables. </p>
     
 </div>
