--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/BloodyBrideBridge.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/BloodyBrideBridge.cshtml
@@ -4,11 +4,11 @@
 }
 
 <div class="container">
-    <img class="locimagemain" src="~/images/locations/bloodybride1.png" alt="Photo from the side of the road of Bloody Bride Bridge.">
+    <img class="locimagemain" src="~/images/locations/bloodybride2.png" alt="Photo from the road of Bloody Bride Bridge.">
 </div>
 <div>
     <h2>Bloody Bride Bridge</h2>
     <h4>Stevens Point - Portage County</h4>
-    <img class="locimageside" src="~/images/locations/bloodybride2.png" alt="Photo from the road of Bloody Bride Bridge.">
-    <p>The bridge is in Stevens Point near Jordan Park. According to a local legend in the area, a bride was killed on the bridge in an accident on the way to her wedding which is where the name originates. As the story goes, it is said that shortly after the death of the bride, she began to wander the bridge back and forth, still wearing her bloody wedding gown. There are also reports of people saying that the bride may appear in the backseat of your cat if you look in the rearview of your mirror on the bridge. The hauntings are said to be more prevalent late at night and during the winter months. </p>
+    <img class="locimageside" src="~/images/locations/bloodybride1.png" alt="Photo from the side of the road of Bloody Bride Bridge.">
+    <p class ="blockinfo">The bridge is in Stevens Point near Jordan Park. According to a local legend in the area, a bride was killed on the bridge in an accident on the way to her wedding which is where the name originates. As the story goes, it is said that shortly after the death of the bride, she began to wander the bridge back and forth, still wearing her bloody wedding gown. There are also reports of people saying that the bride may appear in the backseat of your cat if you look in the rearview of your mirror on the bridge. The hauntings are said to be more prevalent late at night and during the winter months. </p>
 </div>
