--- a/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
                         <li class="dropdown nav-item">
                                 <a class="nav-link text-light">Locations</a>
                                 <div class="dropdown-options droplrg overflow-scroll bg-black">
-                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AlRinglingMuseum">Al Ringling Museum</a> <br />
+                                    <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AlRinglingMuseum">Al Ringling Mansion</a> <br />
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="AmbassadorHotel">Ambassador Hotel</a> <br />
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="BloodyBrideBridge">Bloody Bride Bridge</a> <br />
                                     <a class="text-light" asp-area="" asp-controller="HauntedLocation" asp-action="BoyScoutLane">Boy Scout Lane</a> <br />
