--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/ForestHillCemetery.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/ForestHillCemetery.cshtml
@@ -10,5 +10,5 @@
     <h2>Forest Hill Cemetery</h2>
     <h4>Madison - Dane County</h4>
     <img class="locimageside" src="~/images/locations/forest1.png" alt="Photo of gravestones in Forest Hill Cemetery.">
-    <p>Forest Hill Cemetery was created in 1857 and became the burial ground for soldiers in the civil war, even earlier times it was used as a resting place for Native Americans. As one of Madisons largest and most beautiful cemeteries it holds many important people who have contributed to history, but every cemetery will some lingering souls. People have claimed to get headaches and feel nauseous around the military burials while others have claimed to have seen and even spoken to a “lady in white”. Who is she and what is she waiting for? </p>
+    <p class="blockinfo">Forest Hill Cemetery was created in 1857 and became the burial ground for soldiers in the civil war, even earlier times it was used as a resting place for Native Americans. As one of Madisons largest and most beautiful cemeteries it holds many important people who have contributed to history, but every cemetery will some lingering souls. People have claimed to get headaches and feel nauseous around the military burials while others have claimed to have seen and even spoken to a “lady in white”. Who is she and what is she waiting for? </p>
 </div>
