--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/PfisterHotel.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/PfisterHotel.cshtml
@@ -10,5 +10,5 @@
     <h2>Pfister Hotel</h2>
     <h4>Milwaukee - Milwaukee County</h4>
     <img class="locimageside" src="~/images/locations/pfisterhotel2.png" alt="Photo of the inside of the Pfister Hotel.">
-    <p>The Pfister Hotel is home to professional baseball and basketball teams whenever they are in town to play. Many players in the baseball league have reported paranormal activity in the building such as electrical issues, object manipulation, and seeing apparitions. One report from Adrian Beltre, a player for the L.S. Dodgers, stated that he heard a knocking at his door one night and when he went to check, no one was there. When Adrian returned to his room the air conditioning and television had switched on by themselves. </p>
+    <p class="blockinfo">The Pfister Hotel is home to professional baseball and basketball teams whenever they are in town to play. Many players in the baseball league have reported paranormal activity in the building such as electrical issues, object manipulation, and seeing apparitions. One report from Adrian Beltre, a player for the L.S. Dodgers, stated that he heard a knocking at his door one night and when he went to check, no one was there. When Adrian returned to his room the air conditioning and television had switched on by themselves. </p>
 </div>
