--- a/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/RiversideCemetery.cshtml
+++ b/SDG.SpookyWisconsin.WebUI/Views/HauntedLocation/RiversideCemetery.cshtml
@@ -10,5 +10,5 @@
     <h2>Riverside Cemetery</h2>
     <h4>Appleton - Outagamie County</h4>
     <img class="locimageside" src="~/images/locations/riversidecemetery2.png" alt="Photo of Kate Blood headstone.">
-    <p>Riverside Cemetery is home to the late Kate Blood who has been called an axe murderer and a witch in the area. According to local stories, Kate Blood murdered her husband and her children while others say she simply died of tuberculosis and her husband eventually remarried. People who have visited the grave have claimed to see an apparition in the area. There are also claims that if you visit the tombstone during a full moon, you may witness blood oozing from the face of the family stone. </p>
+    <p class="blockinfo">Riverside Cemetery is home to the late Kate Blood who has been called an axe murderer and a witch in the area. According to local stories, Kate Blood murdered her husband and her children while others say she simply died of tuberculosis and her husband eventually remarried. People who have visited the grave have claimed to see an apparition in the area. There are also claims that if you visit the tombstone during a full moon, you may witness blood oozing from the face of the family stone. </p>
 </div>
