--- a/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
+++ b/SDG.SpookyWisconsin.WebUI/wwwroot/css/site.css
@@ -142,12 +142,19 @@ h2{
     height: 700px;
 }
 .locimagemain{
-    width:700px;
-    height: 500px;
+    padding-left: 200px;
+    padding-bottom: 15px;
 }
 
 .locimageside{
     float: right;
+    margin-left: 5px;
+    padding-bottom: 150px;
+}
+
+.blockinfo{
+    display: block;
+    font-size: 24px;
 }
 
 #imagebig{
